[package]
authors = ["itang <live.tang@gmail.com>"]
name = "deftype-server-rs"
version = "0.1.0"

[dependencies]
ansi_term = "0.7.2"
bcrypt = "0.1.0"
chrono = "0.2.20"
#clippy = "*"
dotenv = "0.8.0"
dotenv_macros = "0.8.0"
#hyper = "0.8.1"
iron = "0.4.0"
jwt = "0.4.0"
lazy_static = "0.2.0"
mount = "0.1.0"
r2d2 = "0.7.0"
r2d2-diesel = "0.6.0"
router = "0.1.0"
rust-crypto = "0.2.34"
serde = "0.7.5"
serde_json = "0.7.1"
serde_macros = "0.7.5"
staticfile = "0.2.0"
time = "0.1.34"
bodyparser = "0.3.0"

[dependencies.diesel]
version = "0.6.2"

[dependencies.diesel_codegen]
default-features = false
features = ["nightly", "postgres"]
version = "0.6.2"
