[package]
authors = ["itang <live.tang@gmail.com>"]
name = "deftype-server-rs"
version = "0.1.0"

[dependencies]
ansi_term = "0.8.0"
bcrypt = "0.1.0"
chrono = "0.2.20"
#clippy = "*"
dotenv = "0.8.0"
dotenv_macros = "0.9.0"
hyper = "*"
iron = "0.4.0"
jwt = "0.4.0"
lazy_static = "0.2.1"
mount = "0.2.1"
r2d2 = "0.7.0"
r2d2-diesel = "0.7.1"
router = "0.2.0"
rust-crypto = "0.2.34"
serde = "0.8.0"
serde_json = "0.8.0"
serde_macros = "0.8.0"
staticfile = "0.3.0"
time = "0.1.34"
bodyparser = "0.4.1"

[dependencies.diesel]
version = "0.7.1"

[dependencies.diesel_codegen]
default-features = false
features = ["postgres"]
version = "0.7.1"
