[package]
authors = ["itang <live.tang@gmail.com>"]
name = "deftype-server-rs"
version = "0.1.0"

[dependencies]
ansi_term = "0.9.0"
bcrypt = "0.1.0"
bodyparser = "0.4.1"
chrono = "0.2.20"
dotenv = "0.8.0"
hyper = "*"
iron = "0.4.0"
jwt = "0.4.0"
lazy_static = "0.2.1"
mount = "0.2.1"
r2d2 = "0.7.0"
r2d2-diesel = "0.9.0"
router = "0.4.0"
rust-crypto = "0.2.34"
serde = "0.8.0"
serde_derive = "0.8.19"
serde_json = "0.8.0"
staticfile = "0.3.0"
time = "0.1.34"
diesel="0.9.0"
diesel_codegen = { version = "0.9.0", features = ["postgres"] }
